Rubber-stamped by Adam Roben.
        Rename SecurityOrigin::allowsAccessFrom to SecurityOrigin::canAccess to 
        clear up ambiguity.

        * bindings/js/kjs_window.cpp:
        (KJS::Window::isSafeScript):
        * platform/SecurityOrigin.cpp:
        (WebCore::SecurityOrigin::canAccess):
        * platform/SecurityOrigin.h:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27433 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,16 @@
+2007-11-04  Sam Weinig  <sam@webkit.org>
+
+        Rubber-stamped by Adam Roben.
+
+        Rename SecurityOrigin::allowsAccessFrom to SecurityOrigin::canAccess to 
+        clear up ambiguity.
+
+        * bindings/js/kjs_window.cpp:
+        (KJS::Window::isSafeScript):
+        * platform/SecurityOrigin.cpp:
+        (WebCore::SecurityOrigin::canAccess):
+        * platform/SecurityOrigin.h:
+
 2007-11-04  Timothy Hatcher  <timothy@apple.com>
 
         Reviewed by Adam.
