--- a/WebKit/win/ChangeLog
+++ b/WebKit/win/ChangeLog
@@ -1,3 +1,19 @@
+2007-11-04  Adam Roben  <aroben@apple.com>
+
+        Cache strings that come directly from WebLocalizedString
+
+        Reviewed by Steve.
+
+        * WebLocalizableStrings.cpp:
+        (copyLocalizedStringFromBundle): This used to be WebLocalizedString,
+        but is now just a static helper function.
+        (findCachedStringInMap): Added static helper.
+        (findCachedString): Refactored and cleaned up code from
+        WebLocalizedLPCTSTR.
+        (cacheString): Ditto.
+        (WebLocalizedString): Rewrote to use the new helper functions.
+        (WebLocalizedLPCTSTR): Changed to use the new helper functions.
+
 2007-11-03  Adam Roben  <aroben@apple.com>
 
         Only override the default user agent string if we're actually given a custom one
