2007-11-05  Mark Rowe  <mrowe@apple.com>
        Reviewed by Alp Toker.

        Add DEPENDPATH to JavaScriptCore and pcre to help qmake with dependencies.

        * JavaScriptCore.pri:
        * pcre/pcre.pri:


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27447 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,12 @@
+2007-11-05  Mark Rowe  <mrowe@apple.com>
+
+        Reviewed by Alp Toker.
+
+        Add DEPENDPATH to JavaScriptCore and pcre to help qmake with dependencies.
+
+        * JavaScriptCore.pri:
+        * pcre/pcre.pri:
+
 2007-11-04  Darin Adler  <darin@apple.com>
 
         Reviewed by Maciej.
