--- a/JavaScriptGlue/ChangeLog
+++ b/JavaScriptGlue/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-05  Geoffrey Garen  <ggaren@apple.com>
+
+        Build fix.
+
+        * ForwardingHeaders/kjs/value.h: Added.
+
 2007-11-03  Sam Weinig  <sam@webkit.org>
 
         Build-fix.
