Touched a file to test my new HTTP access.
        * kjs/scope_chain.cpp:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27451 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-05  Geoffrey Garen  <ggaren@apple.com>
+
+        Touched a file to test my new HTTP access.
+
+        * kjs/scope_chain.cpp:
+
 2007-11-05  Alp Toker  <alp@atoker.com>
 
         Unreviewed build fix for qmake-based ports.
