--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-05  Mark Rowe  <mrowe@apple.com>
+
+        Gtk build fix.
+
+        * kjs/list.cpp:
+
 2007-11-05  Geoffrey Garen  <ggaren@apple.com>
 
         Touched a file to test my new HTTP access.
