* WebView/WebView.mm:         (-[WebView _searchWithSpotlightFromMenu:]):
        Teeny style tweak to test svn access on other machine



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27455 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/ChangeLog
+++ b/WebKit/ChangeLog
@@ -1,6 +1,13 @@
 2007-11-05  John Sullivan  <sullivan@apple.com>
 
         * WebView/WebView.mm:
+        (-[WebView _searchWithSpotlightFromMenu:]):
+
+        Teeny style tweak to test svn access on other machine
+
+2007-11-05  John Sullivan  <sullivan@apple.com>
+
+        * WebView/WebView.mm:
         (-[WebView computedStyleForElement:pseudoElement:]):
         
         Teeny style tweak to test svn access
