2007-11-05  Mark Rowe  <mrowe@apple.com>
        Gtk build fix.

        * pcre/pcre.pri:


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27458 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -2,6 +2,12 @@
 
         Gtk build fix.
 
+        * pcre/pcre.pri:
+
+2007-11-05  Mark Rowe  <mrowe@apple.com>
+
+        Gtk build fix.
+
         * kjs/list.cpp:
 
 2007-11-05  Geoffrey Garen  <ggaren@apple.com>
