--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,14 @@
+2007-11-05  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by mjs.
+
+        Remove one more call to toString(exec).
+        
+        SunSpider claims this is a 0.7% speedup.
+
+        * kjs/operations.cpp:
+        (KJS::equal): remove a call to toString()
+
 2007-11-05  Mark Rowe  <mrowe@apple.com>
 
         Gtk build fix.
