2007-11-05  Eric Seidel  <eric@webkit.org>
        Reviewed by mjs.
        
        Remove another call to toString(exec)
        
        SunSpider claims this is a 0.5% speedup.

        * kjs/operations.cpp:
        (KJS::equal): remove another toString



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27470 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,5 +1,16 @@
 2007-11-05  Eric Seidel  <eric@webkit.org>
 
+        Reviewed by mjs.
+        
+        Remove another call to toString(exec)
+        
+        SunSpider claims this is a 0.5% speedup.
+
+        * kjs/operations.cpp:
+        (KJS::equal): remove another toString
+
+2007-11-05  Eric Seidel  <eric@webkit.org>
+
         * kjs/operations.cpp:
         (KJS::equal): correct broken change.
 
