--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,10 @@
+2007-11-05  Mark Rowe  <mrowe@apple.com>
+
+        Mac build fix.
+
+        * bindings/js/JSHTMLDocumentCustom.cpp:
+        (WebCore::writeHelper):
+
 2007-11-05  Adam Roben  <aroben@apple.com>
 
         Don't crash if SafariTheme can't be loaded
