Fix previous patch to use a 3 bit shift, a 16 bit shift causes a regression in sunspider.
RS=Darin


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27484 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,5 +1,14 @@
 2007-11-06  Oliver Hunt  <oliver@apple.com>
 
+        RS=Darin.
+
+        Fix previous patch to use a 3 bit shift, a 16 bit shift causes a regression in sunspider.
+
+        * kjs/nodes.cpp:
+        (KJS::add):
+
+2007-11-06  Oliver Hunt  <oliver@apple.com>
+
         Reviewed by Darin.
 
         Replace boolean comparisons in AddNode with mask
